♻️ restructure api
- reorganise file structure and add documention for this
- make db models interfaces rather than classes
- use hapi server
- use kebab case for directories and files

TODO: resolvers not working due to access to db connection
